[package]
name = "diego"
version = "0.1.0"
authors = ["DCjanus <DCjanus@dcjanus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.0"

[dev-dependencies]
futures = "0.3.13"
tokio = { version = "1.4.0", features = ["full"] }
